welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: '<-' expected but integer literal found.
for (compteur 1 <- 8)
              ^Runner:11: error: illegal start of simple expression
	}
        ^